Actualizando index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-hola mundo
-Aprendiendo Git con bedu
-propietario rivd
+<!DOCTYPE html>
+<html>
+<head>
+	<title> hola mundo </title>
+</head>
+<body>
+	Aprendiendo Git con Bedu
+	Agregando cambios en el archivo
+</body>
+</html>
