--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> hola mundo </title>
+	<title> hola mundo -- Version testing </title>
 </head>
 <body>
-	Aprendiendo Git con Bedu
-	Agregando cambios en el archivo
+	Aprendiendo el uso de ramas en Git con Bedu
+	Version Testings
 </body>
 </html>
