--- a/bedu.html
+++ b/bedu.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> titulo del archivo bedu </title>
+	<title> hola mundo - generando conflicto testing </title>
 </head>
 <body>
-	experimento con ramas
+	Aprendiendo el uso de ramas en git con bedu
+	version testing
 </body>
 </html>
